TD1-minikube-dashboard/01-postgresql-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: postgresql
  name: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
      - env:
        - name: POSTGRES_USER
          value: squashtm
        - name: POSTGRES_PASSWORD
          value: squashtm
        - name: POSTGRES_ROOT_PASSWORD
          value: squashtm
        - name: POSTGRES_DATABASE
          value: squashtm
        image: postgres:15
        imagePullPolicy: IfNotPresent
        name: postgresql
        ports:
        - containerPort: 5432
          protocol: TCP
        resources:
          limits:
            cpu: 1000m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 512Mi

      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30

---
apiVersion: v1
kind: Service
metadata:
  name: svc-postgresql
spec:
  type: ClusterIP
  ports:
  - name: postgresql
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: postgresql
